--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<h1> Black Goose Bistro </h1>
 </head>
 	<body>
-
+<!-- Best website ever!!-->
 <h2>The Restaurant</h2>
 <p>
 The Black Goose Bistro offers casual lunch and dinner fare in hip
